<resources>
    <string name="app_name">doumdadgi</string>
    <string name="app_name_ko">도움닫기</string>
    <string name="explanation_attendance_access">
         활동비 지급을 위해 도우미 활동 시간을 기록합니다.\n장애 학생과 도우미 학생 모두 활동 시작 버튼을 누릅니다.\n\n
        같은 강의실에서 제한 시간 내에 두 학생이 눌렀을 때,\n그 날의 도우미 활동 시작 시간이 기록됩니다.\n\n
        정해진 도우미 시간을 초과하여 활동한 경우,\n장애 학생과 도우미 학생 모두 활동 종료 버튼을 누릅니다.
    </string>
    <string name="before_access_start">활동 시작</string>
    <string name="before_access_end">활동 종료</string>

    // Firebase E-mail Authentication
    <string name="email">E-MAIL</string>
    <string name="password">PASSWORD</string>

    <string name="signin">LOG IN</string>
    <string name="success_login">로그인 성공</string>
    <string name="failed_login">로그인 실패</string>

    <string name="toast_msg_empty_phone_number">연락처를 입력하세요</string>
    <string name="toast_msg_empty_email_id">이메일 아이디를 입력하세요</string>
    <string name="toast_msg_empty_password">비밀번호를 입력하세요</string>
    <string name="toast_msg_invalid_email_id">유효한 메일 주소가 아닙니다</string>
    <string name="toast_msg_invalid_password">유효한 비밀번호가 아닙니다</string>

    <string name="signup">Don\'t have an account? Sign Up</string>
    <string name="success_signup">회원가입 성공</string>
    <string name="failed_signup">회원가입 실패</string>

    // 알림 기능 장애 학생과 비장애 학생 메뉴
    <string name="menu_notice_requests">모집 내용</string>
    <string name="menu_notice_appliers">지원자 확인</string>

    <string name="chip_in_dormitory">기숙사</string>
    <string name="chip_not_in_dormitory">통학</string>

    <string-array name="lecture_types">
        <item>전체</item>
        <item>일선과목</item>
        <item>전공과목</item>
        <item>교양과목</item>
        <item>기초과목</item>
        <item>영역별교양</item>
    </string-array>

    <string-array name="majors">
        <item>전체</item>
        <item>응용화학생명공학전공(과)</item>
        <item>환경안전공학전공(과)</item>
        <item>건설시스템공학전공(과)</item>
        <item>건축공학전공(과)</item>
        <item>건축학전공(5년)(과)</item>
        <item>전자공학전공(과)</item>
        <item>ICT융합전공(과)</item>
        <item>수학전공(과)</item>
        <item>소프트웨어및컴퓨터공학전공(과)</item>
        <item>교통시스템공학전공(과)</item>
        <item>사이버보안전공(과)</item>
        <item>산업공학전공(과)</item>
        <item>공군ICT전공(과)</item>
        <item>물리학전공(과)</item>
        <item>기계공학전공(과)</item>
        <item>화학공학전공(과)</item>
        <item>신소재공학전공(과)</item>
        <item>문화콘텐츠학전공(과)</item>
        <item>심리학전공(과)</item>
        <item>불어불문학전공(과)</item>
        <item>e-비즈니스학전공(과)</item>
        <item>자동차SW전공(과)</item>
        <item>글로벌경영학전공(과)</item>
        <item>일본지역연구전공(과)</item>
        <item>영어영문학전공(과)</item>
        <item>약학전공(과)</item>
        <item>한국학전공(과)</item>
        <item>경영학전공(과)</item>
        <item>스포츠레저학전공(과)</item>
        <item>간호학전공(과)</item>
        <item>간호학전공(특별과정)(과)</item>
        <item>인문사회데이터분석전공(과)</item>
        <item>융합시스템공학전공(과)</item>
        <item>디지털미디어전공(과)</item>
        <item>화학전공(과)</item>
        <item>금융공학전공(과)</item>
        <item>중국지역연구전공(과)</item>
        <item>행정학전공(과)</item>
        <item>사회학전공(과)</item>
        <item>의학전공(과)</item>
        <item>생명과학전공(과)</item>
        <item>정치외교학전공(과)</item>
        <item>사학전공(과)</item>
        <item>경제학전공(과)</item>
        <item>국제통상전공(과)</item>
        <item>국어국문학전공(과)</item>
        <item>문화산업과커뮤니케이션전공(과)</item>
    </string-array>
</resources>
