<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_primary" >

    <ImageView
        android:id="@+id/image_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout_login"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout_login"
        app:layout_constraintStart_toStartOf="@+id/frameLayout_login"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_jump_white" />

    <Button
        android:id="@+id/btn_log_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/attendance_border_round"
        android:backgroundTint="@color/colorSecondary"
        android:elevation="8dp"
        android:text="@string/signin"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout_login"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout_login"
        app:layout_constraintStart_toStartOf="@+id/frameLayout_login"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout_login" />

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="72dp"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/attendance_border_round"
        app:layout_constraintBottom_toTopOf="@+id/text_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/email"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/text_eamil_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toStartOf="@+id/textView_AjouMail"
                app:layout_constraintStart_toStartOf="@+id/textView_email"
                app:layout_constraintTop_toBottomOf="@id/textView_email" />

            <TextView
                android:id="@+id/textView_AjouMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\@ ajou.ac.kr"
                app:layout_constraintBottom_toBottomOf="@+id/text_eamil_id"
                app:layout_constraintEnd_toEndOf="@+id/textView_email"
                app:layout_constraintTop_toTopOf="@+id/text_eamil_id" />

            <TextView
                android:id="@+id/textView_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/password"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/text_eamil_id"
                app:layout_constraintTop_toBottomOf="@+id/text_eamil_id" />

            <EditText
                android:id="@+id/text_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView_AjouMail"
                app:layout_constraintStart_toStartOf="@+id/textView_password"
                app:layout_constraintTop_toBottomOf="@id/textView_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>